@@ -1,33 +1,15 @@
+import com.vanniktech.maven.publish.SonatypeHost
 
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-import java.util.Properties
-import kotlin.io.encoding.ExperimentalEncodingApi
 plugins {
     kotlin("multiplatform")
-    kotlin("plugin.serialization")
     id("com.android.library")
+    id("maven-publish")
+    id("signing")
+    id("com.vanniktech.maven.publish")
 }
 
-group = "io.github.milkcocoa0902"
-version = "0.3.2"
-
-java.sourceCompatibility = JavaVersion.VERSION_11
-java {
-    toolchain {
-        languageVersion.set(JavaLanguageVersion.of(17)) // 🔹 Java 17 でビルド
-    }
-}
-
-tasks.withType<JavaCompile>().configureEach {
-    sourceCompatibility = JavaVersion.VERSION_11.toString()  // 🔹 Java 11 互換のソースコード
-    targetCompatibility = JavaVersion.VERSION_11.toString()  // 🔹 Java 11 互換のバイトコードを出力
-}
-
-tasks.withType<KotlinCompile> {
-    kotlinOptions {
-        freeCompilerArgs = listOf("-Xjsr305=strict")
-        jvmTarget = "11"
-    }
+repositories {
+    mavenCentral()
 }
 
 kotlin {
@@ -37,7 +19,6 @@ kotlin {
         }
         testRuns["test"].executionTask.configure {
             useJUnitPlatform()
-            jvmArgs("--add-opens", "java.base/java.time=ALL-UNNAMED")
         }
     }
 
@@ -64,32 +45,15 @@ kotlin {
 
     sourceSets {
         commonMain.dependencies {
-            implementation(libs.kotlin.serialization.core)
-            implementation(libs.kotlinx.coroutines.core)
-            implementation(libs.kotlinx.datetime)
-            implementation(libs.okio)
             implementation(project(":colotok"))
+            implementation(libs.kotlinx.coroutines.core)
         }
-
         commonTest.dependencies {
             implementation(kotlin("test"))
-            implementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3")
-        }
-    }
-    compilerOptions {
-        // Common compiler options applied to all Kotlin source sets
-        freeCompilerArgs.add("-Xexpect-actual-classes")
-    }
-//    explicitApi()
-
-    targets.configureEach {
-        compilations.configureEach {
-            compilerOptions.configure {
-                freeCompilerArgs.add("-Xexpect-actual-classes")
-            }
         }
     }
 }
+
 
 android {
     compileSdk = 34
@@ -101,4 +65,48 @@ android {
     }
 }
 
-dependencies { }
+
+val CORE_LIBRARY_DESCRIPTION: String by project
+val PROJECT_URL: String by project
+val LICENSE_TYPE: String by project
+val LICENSE_URL: String by project
+val LICENSE_DISTRIBUTION: String by project
+val DEVELOPER_ID: String by project
+val DEVELOPER_NAME: String by project
+val DEVELOPER_EMAIL: String by project
+val REPOSITORY_URL: String by project
+
+
+mavenPublishing {
+    publishToMavenCentral(SonatypeHost.CENTRAL_PORTAL)
+    signAllPublications()
+    coordinates(
+        artifactId = "colotok-coroutines",
+    )
+
+    pom {
+        name.set("Colotok")
+        description.set("${CORE_LIBRARY_DESCRIPTION} - Coroutines integration")
+        url.set(PROJECT_URL)
+
+        licenses {
+            license {
+                name.set(LICENSE_TYPE)
+                url.set(LICENSE_URL)
+                distribution.set(LICENSE_DISTRIBUTION)
+            }
+        }
+
+        developers {
+            developer {
+                id.set(DEVELOPER_ID)
+                name.set(DEVELOPER_NAME)
+                email.set(DEVELOPER_EMAIL)
+            }
+        }
+
+        scm {
+            url.set(REPOSITORY_URL)
+        }
+    }
+}
